--- a/style.css
+++ b/style.css
@@ -59,21 +59,6 @@ nav ul li a:hover {
   box-shadow: 0 6px 12px rgba(255, 75, 43, 0.6);
 }
 
-
-
-.menu-item {
-  background-color: #1e1e1e;
-  border-radius: 10px;
-  width: 100%;
-  max-width: 220px;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  box-shadow: 0 4px 8px rgba(142, 143, 75, 0.39);
-  transition: transform 0.2s;
-}
-
 .menu-item img {
   width: 100%;
   aspect-ratio: 4/3; /* ensures consistent image ratio */
@@ -91,7 +76,7 @@ nav ul li a:hover {
 }
 
 .menu-item {
-  background-color: #1e1e1e;
+  background-color: rgba(100, 98, 98, 0.562);
   border-radius: 10px;
   width: 220px;
   height: 350px;
